--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,28 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# IntelliJ Idea #
+.idea/
+.gradle/
+build/
+*.iml
+*.ipr
+*.iws
+
+_windows/
+inspection/
+databaseSettings.xml
+debugger.xml
+diff.xml
+file_template_settings.xml
+github_settings.xml
+ide.general.xml
+Default.xml
+IntelliLang.xml
+mavenVersion.xml
+other.xml
+ui.Inf.xml
+vcs.xml
+web.browsers.xml
