--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # Mac
 .DS_Store
+*.bd
 
 # Maven
 log/
@@ -36,3 +37,7 @@ inspection/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Bootstrap
+**/bootstrap/**/*.*
+!**/bootstrap/bootstrap.css
